
  * Fixed a bug when Start Minimized was enabled and not the TaskBar icon
  * Implemented the option to add a random track if the playlist is empty
  * Fixed bug in manual cover downloader when the results where below 10
  * The order of radiostations preference are saved
  * Added an option to allow albums be ordered by Year
  * Now the database has version for future updates.
  * If covers are updated it will be changed in database. If you had older version
    you need to delete the old database ~/.guayadeque/guayadeque.db
  * Now can be updated only the selected RadioGenres and not all as before.
  * Added support for Multimedia Keys (Play,Pause,Stop,Next,Prev)
  * Fixed a bug when searching text in radio panel introduced in v0.0.3
  * Fixed a bug when pulsed random with only one track in playlist
  * Fixed the load of the year field of the saved playlist tracks
  * Added support for mpris dbus protocol. See http://wiki.xmms2.xmms.se/wiki/MPRIS
  * Fixed support for translations
  * Fixed bug saving the labels to the mp3 files
  * Fixed bug that prevented to get info (lastfm, lyrics) for some names
    with special chars
  * Now the hidden categories in LastFM Panel gets saved on close
  * Fixed bug that prevented to load files with some special chars
  * Fixed colors in LastFM and Lyrics panel to follow theme
  * ListBox colors now follow current theme
  * Removed bug in Track editor year field
  * Changed from libid3 to taglib as need id3 v2.4 support. Be aware that
    not all program will read ID3 v2.4 tags. For example if you use easytag
    you should use the v2.1.1 or later

* 2009-05-12 v0.0.3 Beta
  * Added Labels in Radio panel. This change needed a database schema change
  so if you had an older version you need to remove  ~/.guayadeque/guayadeque.db
  * Fixed some minor bugs

* 2009-04-06 v0.0.2 Beta

  * Fixed manual cover downloader
  * Added progress bar to cover editor  
  * Added support to translations
  * Fixed bug in ListBox colors
